Working auth flow, working sorting, needs a layout bug fixed

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,3 +1,7 @@
+html, body {
+	overflow: hidden;
+}
+
 html {
 	position: relative;
 	min-height: 100%;
@@ -22,11 +26,112 @@ body {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7db9e8', endColorstr='#000000', GradientType=0); /* IE6-9 */
 }
 
+#tweet {
+	margin-top: 20px;
+}
+
+#auth-wrapper {
+	border-radius: 3px;
+
+	box-sizing: border-box;
+
+	background: #eee;
+
+	padding: 20px;
+
+	width: 350px;
+	height: 250px;
+
+	position: fixed;
+
+	left: 50%;
+	top: 50%;
+
+	margin-top: -125px;
+	margin-left: -175px;
+	
+	z-index: 4000;
+
+	-webkit-box-shadow:  0px 0px 7px 3px rgba(128, 2, 2, 0.5);
+	box-shadow:  0px 0px 7px 3px rgba(128, 2, 2, 0.5);
+
+	#register {
+		margin-top: 0;
+	}
+
+	#done-registering {
+		display: none;
+
+		color: blue;
+		text-decoration: none;
+		
+		&:visited {
+			color: blue;
+		}
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+
+	#disclaimer {
+		font-size: 0.9em;
+		color: #333;
+	}
+}
+
+#screen {
+	background-color: black;
+	opacity: 0.5;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+	display: none;
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 3000;
+}
+
+#auth {
+	list-style-type: none;
+
+	padding: 0;
+	margin: 0;
+
+	li {
+		display: inline-block;
+		margin: 5px;
+
+		img {
+			background-color: rgba(2, 2, 255, 0.2);
+
+			-webkit-box-shadow:  0px 0px 9px 1px rgba(2, 2, 255, 0.5);
+			box-shadow:  0px 0px 9px 1px rgba(2, 2, 255, 0.5);
+
+			&.connected {
+				opacity: 0.5;
+
+				background-color: rgba(30, 214, 52, 0.5);
+
+				-webkit-box-shadow:  0px 0px 9px 1px rgba(30, 214, 52, 1);
+				box-shadow:  0px 0px 9px 1px rgba(30, 214, 52, 1);
+			}
+		}
+	}
+}
+
+#cloud-2 {
+	position: absolute;
+	left: 250px;
+	top: 0px;
+}
+
 #body {
 	height: 100%;
 	width: 100%;
-	margin-top: -200px;
-	padding-top: 100px;
+	margin-top: -250px;
+	padding-top: 150px;
 	padding-bottom: 100px;
 	display: table;
 }
@@ -38,18 +143,54 @@ body {
 	height: 100%;
 }
 
-#boxes > div {
+#message {
+	display: none;
+	width: 200px;
+	height: 25px;
+	padding: 10px;
+	background-color: white;
+	border-radius: 3px;
+	text-align: center;
+	position: fixed;
+	left: 50%;
+	margin-left: -100px;
+	top: 50px;
+}
+
+#cards {
+	height: 200px;
+}
+
+#cards > div {
 	display: inline-block;
+
 	width: 270px;
 	height: 200px;
+	
 	margin: 10px;
+	padding: 0;
+
+	box-sizing: border-box;
+}
+
+#cards .card {
+	display: inline-block;
+
+	width: 270px;
+	height: 200px;
+	
+	margin: 0;
+	padding: 10px;
+	
 	background-color: white;
 	text-align: left;
-	padding: 5px;
+	font-size: 20px;
 
 	position: relative;
 
 	z-index: 1000;
+
+	box-sizing: border-box;
 
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -67,6 +208,13 @@ body {
 
 	.grabbing {
 		cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), default !important;
+	}
+
+	&.default {
+		font-size: 100pt;
+		padding: 20px;
+		text-align: center;
+		vertical-align: middle;
 	}
 
 	&:hover {
@@ -103,14 +251,14 @@ body {
 	100% { -webkit-transform: translate(1px, 1px); }
 }
 
-#boxes > div.pulsing {
+#cards div.pulsing {
 	-webkit-animation-name: pulse;
 	-webkit-animation-duration: 2s;
 	-webkit-animation-direction: alternate;
 	-webkit-animation-iteration-count: infinite;
 }
 
-#boxes > div.gyrating {
+#cards div.gyrating {
 	-webkit-animation-name: gyrate;
 	-webkit-animation-duration: 20s;
 	-webkit-animation-timing-function: linear;
@@ -118,7 +266,7 @@ body {
 }
 
 header {
-	height: 200px;
+	height: 250px;
 	width: 100%;
 }
 
